# beatMeBackend

./: .coveragerc  .dockerignore  .env.docker.example  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: pytest.yml  styles.yml  tests.yml
app/: __init__.py  extensions.py  main.py
app/models/: __init__.py
app/models/api/: auth.py  base.py  challenge.py  playlist.py  submission.py  track.py  user.py  utils.py  vote.py
app/models/db/: __init__.py  base.py  challenge.py  playlist.py  submission.py  track.py  user.py  utils.py  vote.py
app/routes/: auth.py  challenges.py  playlists.py  submissions.py  tracks.py  users.py  utils.py  votes.py
app/services/: playlists.py  spotify.py  tracks.py
app/services/auth/: __init__.py  base.py  middleware.py
app/settings/: __init__.py  base.py  integration.py
app/utils/: db.py  exceptions.py  redis.py
manage/: main.py  services.py
manage/fixtures/: playlists.json  texts.json
scripts/: styles  tests
tests/: conftest.py
tests/fixtures/: tracks.json
tests/services/auth/: base.py
tests/test_models/test_api/: test_challenge.py
tests/test_models/test_db/: test_playlist.py  test_submission.py  test_track.py  test_user.py  test_utils.py
tests/test_routes/: test_auth.py  test_challenges.py  test_playlists.py  test_submissions.py  test_tracks.py  test_users.py  test_utils.py  test_votes.py
tests/test_services/: base.py  test_playlists.py  test_spotify.py  test_tracks.py
tests/test_services/test_auth/: test_base.py  test_middleware.py
(+8 files in other folders)
